--- a/.env-development
+++ b/.env-development
@@ -1,25 +1,21 @@
-REGISTRY=local
-IMAGE=svelte/app
-
 NODE_ENV=development
+APP_ENV=development
 
-PORT_PUBLISHED=30000
-PORT=3000
-
-DEBUG_HIDE_DATE=0
-DEBUG_PREFIX=svelte_app
-DEBUG=svelte_app:*
-DEBUG_COLORS=1
-
-APP_NAMESPACE=svelte_app
-TARGET_JS=widget_svelte_app
-PUBLIC_PATH=""
-
-DOCKER_STACK_NAME=svelte_app
-NETWORK_NAME=svelte_app_net_development
-VOL_NAME=svelte_app_vol_development
+NETWORK_NAME=${APP_NS}_net_${APP_ENV}
+VOL_NAME=${APP_NS}_vol_${APP_ENV}
 
 VERSION=dev
 
-WATCH_FOLDERS="server src"
-WATCH_CMD="npm run dev"
+# ----------
+
+BASE_PATH=""
+
+# ----------
+
+DEPLOY_RESOURCES_LIMITS_CPUS=0.50
+DEPLOY_RESERVATIONS_LIMITS_CPUS=0.25
+
+# ----------
+
+WATCH_FOLDERS="server src static"
+WATCH_CMD="npm start"
