--- a/package.json
+++ b/package.json
@@ -15,45 +15,52 @@
   "author": "Thiago Lagden",
   "license": "MIT",
   "scripts": {
-    "sprite": "svg-sprite --dest ./src/_components/svg/ --svg-rootattrs ./src/_assets/svg/sprite.rootattrs.json --config ./src/_assets/svg/sprite.config.json ./src/_assets/svg/files/*.svg",
+    "echo": "echo \"em stand-by...\"",
+    "sprite": "spritetify -d ./src/_assets/svg/files/ -o ./src/_components/svg/Sprite.svelte -c",
     "eslint": "eslint --config .eslintrc.js --ext .js,.svelte --ignore-path .gitignore .",
     "rm": "rm -rf ./public/*",
-    "cp": "mkdir -p ./public && cp -r ./static/* ./public/.",
-    "prebuild": "run-s test rm cp",
-    "build": "rollup -c",
-    "dev": "run-s test build start",
+    "cp": "mkdir -p ./public && cp -R ./static/. ./public",
+    "cleanup": "run-s rm cp",
+    "rollup": "rollup -c",
+    "serve": "node server",
     "test": "npm run eslint",
-    "start": "node server"
+    "prebuild": "npm test",
+    "build": "run-s cleanup rollup",
+    "dev": "run-s cleanup rollup echo",
+    "prestart": "npm test",
+    "start": "run-p serve dev"
   },
   "dependencies": {
-    "@tadashi/koa-base": "3.11.0",
-    "debug": "4.1.1",
+    "@tadashi/koa-base": "3.17.0",
+    "debug": "4.3.1",
     "koa-ctx-cache-control": "1.0.1",
     "koa-static": "5.0.0",
-    "supports-color": "7.1.0"
+    "supports-color": "8.1.1"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "7.1.1",
+    "@emotion/css": "11.1.3",
+    "@rollup/plugin-commonjs": "17.0.0",
+    "@rollup/plugin-node-resolve": "11.1.0",
+    "@tadashi/hex-id": "2.0.0",
     "@tadashi/rollup-plugin-brotli": "1.0.2",
-    "autoprefixer": "9.7.6",
-    "emotion": "10.0.27",
-    "eslint": "6.8.0",
-    "eslint-config-xo": "0.29.1",
-    "eslint-plugin-svelte3": "2.7.3",
-    "eslint-plugin-unicorn": "18.0.1",
+    "@tadashi/rollup-plugin-env": "0.1.2",
+    "@tadashi/rollup-plugin-widget": "1.0.0",
+    "@tadashi/spritetify": "1.0.0",
+    "autoprefixer": "10.2.3",
+    "eslint": "7.18.0",
+    "eslint-config-xo": "0.34.0",
+    "eslint-plugin-html": "6.1.1",
+    "eslint-plugin-svelte3": "3.0.0",
+    "eslint-plugin-unicorn": "27.0.0",
+    "node-sass": "5.0.0",
     "npm-run-all": "4.1.5",
-    "postcss-conditionals": "2.1.0",
-    "postcss-easy-import": "3.0.0",
-    "postcss-functions": "3.0.0",
-    "postcss-mixins": "6.2.3",
-    "postcss-nested": "4.2.1",
-    "postcss-simple-vars": "5.0.2",
-    "rollup": "2.3.3",
-    "rollup-plugin-svelte": "5.2.1",
-    "rollup-plugin-terser": "5.3.0",
-    "svelte": "3.20.1",
-    "svelte-preprocess-postcss": "1.1.1",
-    "svg-sprite": "1.5.0"
+    "postcss": "8.2.4",
+    "rollup": "2.38.0",
+    "rollup-plugin-css-only": "3.1.0",
+    "rollup-plugin-svelte": "7.1.0",
+    "rollup-plugin-svg-sprite": "1.0.0",
+    "rollup-plugin-terser": "7.0.2",
+    "svelte": "3.32.0",
+    "svelte-preprocess": "4.6.3"
   }
 }
