--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,14 +1,13 @@
 version: "3.7"
 services:
   app:
+    tty: true
     build:
       dockerfile: ${DOCKERFILE}
       context: ./
       args:
-        PORT: ${PORT}
         NODE_ENV: ${NODE_ENV}
-        VERSION: ${VERSION}
-        ARG_ENTR_INOTIFY_WORKAROUND: ${ARG_ENTR_INOTIFY_WORKAROUND:-0}
+        ARG_ENTR_INOTIFY_WORKAROUND: ${ARG_ENTR_INOTIFY_WORKAROUND:-1}
     command: >
       /bin/ash -c "
         bin/watch
@@ -17,12 +16,7 @@ services:
       WATCH_FOLDERS: "${WATCH_FOLDERS}"
       WATCH_CMD: "${WATCH_CMD}"
     volumes:
-      - ./bin:/home/node/app/bin
-      - ./rollup_plugin:/home/node/app/rollup_plugin
-      - ./server:/home/node/app/server
-      - ./src:/home/node/app/src
-      - ./package.json:/home/node/app/package.json
-      - ./rollup.config.js:/home/node/app/rollup.config.js
-      - ./postcss.config.js:/home/node/app/postcss.config.js
-      - ./.eslintrc.js:/home/node/app/.eslintrc.js
-      - ./.gitignore:/home/node/app/.gitignore
+      - .:/home/node/app
+      - /home/node/app/node_modules
+    # depends_on:
+    #   - seu_db_ou_dependencia
