--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -7,7 +7,9 @@ services:
       context: ./
       args:
         NODE_ENV: ${NODE_ENV}
-        ARG_ENTR_INOTIFY_WORKAROUND: ${ARG_ENTR_INOTIFY_WORKAROUND:-1}
+        ARG_ENTR_INOTIFY_WORKAROUND: ${ARG_ENTR_INOTIFY_WORKAROUND}
+    # depends_on:
+    #   - seu_db_ou_dependencia
     command: >
       /bin/ash -c "
         bin/watch
@@ -18,5 +20,3 @@ services:
     volumes:
       - .:/home/node/app
       - /home/node/app/node_modules
-    # depends_on:
-    #   - seu_db_ou_dependencia
