--- a/package.json
+++ b/package.json
@@ -31,23 +31,24 @@
     "start": "run-p serve dev"
   },
   "dependencies": {
-    "@tadashi/koa-base": "3.17.0",
+    "@tadashi/koa-base": "3.17.1",
     "debug": "4.3.1",
+    "koa": "2.13.1",
     "koa-ctx-cache-control": "1.0.1",
     "koa-static": "5.0.0",
     "supports-color": "8.1.1"
   },
   "devDependencies": {
     "@emotion/css": "11.1.3",
-    "@rollup/plugin-commonjs": "17.0.0",
-    "@rollup/plugin-node-resolve": "11.1.0",
+    "@rollup/plugin-commonjs": "17.1.0",
+    "@rollup/plugin-node-resolve": "11.1.1",
     "@tadashi/hex-id": "2.0.0",
     "@tadashi/rollup-plugin-brotli": "1.0.2",
     "@tadashi/rollup-plugin-env": "0.1.2",
     "@tadashi/rollup-plugin-widget": "1.0.0",
     "@tadashi/spritetify": "1.0.0",
-    "autoprefixer": "10.2.3",
-    "eslint": "7.18.0",
+    "autoprefixer": "10.2.4",
+    "eslint": "7.19.0",
     "eslint-config-xo": "0.34.0",
     "eslint-plugin-html": "6.1.1",
     "eslint-plugin-svelte3": "3.0.0",
@@ -55,12 +56,12 @@
     "node-sass": "5.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.2.4",
-    "rollup": "2.38.0",
+    "rollup": "2.38.3",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-svg-sprite": "1.0.0",
     "rollup-plugin-terser": "7.0.2",
-    "svelte": "3.32.0",
-    "svelte-preprocess": "4.6.3"
+    "svelte": "3.32.1",
+    "svelte-preprocess": "4.6.5"
   }
 }
