--- a/.env-base
+++ b/.env-base
@@ -1,33 +1,43 @@
 REGISTRY=docker.io
 IMAGE=lagden/boilerplate_svelte
 
-APP_NS=boilerplate_svelte
-
 NODE_ENV=production
 APP_ENV=production
 
-PORT_PUBLISHED=5000
-PORT=5000
+APP_NS=boilerplate_svelte
 
 DEBUG_HIDE_DATE=0
 DEBUG_COLORS=1
 DEBUG_PREFIX=${APP_NS}
 DEBUG=${DEBUG_PREFIX}:*
 
-NETWORK_NAME=${APP_NS}_net_${APP_ENV}
-VOL_NAME=${APP_NS}_vol_${APP_ENV}
+PORT_PUBLISHED=5000
+PORT=5000
 
 VERSION=base
 
 # ----------
 
+BASE_URL=""
 TARGET_JS=${APP_NS}_js
-BASE_PATH=""
 
-# coloque suas variáveis
+# colocar suas vars...
 # ...
 
 # ----------
+
+REQUIRE_GEN=1
+ENV_INCLUDE="NODE_ENV APP_ENV APP_NS BASE_URL VERSION TARGET_JS"
+
+# ----------
+
+WATCH_FOLDERS="server src static"
+WATCH_CMD="npm start"
+
+# ----------
+
+NETWORK_NAME=${APP_NS}_net_${APP_ENV}
+VOL_NAME=${APP_NS}_vol_${APP_ENV}
 
 DEPLOY_REPLICAS=1
 DEPLOY_RESOURCES_LIMITS_CPUS="'0.50'"
