--- a/.env-development
+++ b/.env-development
@@ -1,21 +1,16 @@
 NODE_ENV=development
 APP_ENV=development
 
-NETWORK_NAME=${APP_NS}_net_${APP_ENV}
-VOL_NAME=${APP_NS}_vol_${APP_ENV}
-
 VERSION=dev
 
 # ----------
 
-BASE_PATH=""
+BASE_URL=""
 
 # ----------
+
+NETWORK_NAME=${APP_NS}_net_${APP_ENV}
+VOL_NAME=${APP_NS}_vol_${APP_ENV}
 
 DEPLOY_RESOURCES_LIMITS_CPUS=0.50
 DEPLOY_RESERVATIONS_LIMITS_CPUS=0.25
-
-# ----------
-
-WATCH_FOLDERS="server src static"
-WATCH_CMD="npm start"
