--- a/.env-staging
+++ b/.env-staging
@@ -1,11 +1,13 @@
 NODE_ENV=production
 APP_ENV=staging
 
-NETWORK_NAME=${APP_NS}_net_${APP_ENV}
-VOL_NAME=${APP_NS}_vol_${APP_ENV}
-
 VERSION=1.0.0-staging
 
 # ----------
 
-BASE_PATH=""
+BASE_URL=""
+
+# ----------
+
+NETWORK_NAME=${APP_NS}_net_${APP_ENV}
+VOL_NAME=${APP_NS}_vol_${APP_ENV}
