--- a/docker-compose.template.yml
+++ b/docker-compose.template.yml
@@ -14,12 +14,10 @@ services:
       NODE_ENV: ${NODE_ENV}
       APP_ENV: ${APP_ENV}
       APP_NS: ${APP_NS}
-      VERSION: ${VERSION}
       PORT: ${PORT}
       PORT_PUBLISHED: ${PORT_PUBLISHED}
-      TARGET_JS: ${TARGET_JS}
-      BASE_PATH: ${BASE_PATH}
-      # coloque seus envs
+      VERSION: ${VERSION}
+      # coloque mais envs...
     ports:
       - ${PORT_PUBLISHED}:${PORT}
     networks:
@@ -39,3 +37,7 @@ services:
 networks:
   net:
     name: ${NETWORK_NAME}
+
+# volumes:
+#   db:
+#     name: ${VOL_NAME}_db
