--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "Thiago Lagden",
   "license": "MIT",
   "scripts": {
-    "echo": "echo \"em stand-by...\"",
-    "sprite": "spritetify -d ./src/_assets/svg/files/ -o ./src/_components/svg/Sprite.svelte -c",
+    "echo": "echo \"idle...\"",
+    "sprite": "spritetify -d ./src/_assets/svg/files/ -o ./src/_components/_global/Sprite.svelte -c",
     "eslint": "eslint --config .eslintrc.js --ext .js,.svelte --ignore-path .gitignore .",
     "rm": "rm -rf ./public/*",
     "cp": "mkdir -p ./public && cp -R ./static/. ./public",
@@ -24,8 +24,7 @@
     "rollup": "rollup -c",
     "serve": "node server",
     "test": "npm run eslint",
-    "prebuild": "npm test",
-    "build": "run-s cleanup rollup",
+    "build": "run-s test cleanup rollup",
     "dev": "run-s cleanup rollup echo",
     "prestart": "npm test",
     "start": "run-p serve dev"
@@ -36,32 +35,31 @@
     "koa": "2.13.1",
     "koa-ctx-cache-control": "1.0.1",
     "koa-static": "5.0.0",
+    "local-access": "1.1.0",
     "supports-color": "8.1.1"
   },
   "devDependencies": {
     "@emotion/css": "11.1.3",
     "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.1.1",
+    "@rollup/plugin-node-resolve": "11.2.0",
     "@tadashi/hex-id": "2.0.0",
     "@tadashi/rollup-plugin-brotli": "1.0.2",
-    "@tadashi/rollup-plugin-env": "0.1.2",
-    "@tadashi/rollup-plugin-widget": "1.0.0",
+    "@tadashi/rollup-plugin-widget": "2.0.0",
     "@tadashi/spritetify": "1.0.0",
     "autoprefixer": "10.2.4",
-    "eslint": "7.19.0",
-    "eslint-config-xo": "0.34.0",
+    "eslint": "7.20.0",
+    "eslint-config-xo": "0.35.0",
     "eslint-plugin-html": "6.1.1",
-    "eslint-plugin-svelte3": "3.0.0",
-    "eslint-plugin-unicorn": "27.0.0",
+    "eslint-plugin-svelte3": "3.1.2",
+    "eslint-plugin-unicorn": "28.0.2",
     "node-sass": "5.0.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.2.5",
-    "rollup": "2.38.5",
+    "postcss": "8.2.6",
+    "rollup": "2.40.0",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-svelte": "7.1.0",
-    "rollup-plugin-svg-sprite": "1.0.0",
     "rollup-plugin-terser": "7.0.2",
-    "svelte": "3.32.2",
-    "svelte-preprocess": "4.6.6"
+    "svelte": "3.34.0",
+    "svelte-preprocess": "4.6.9"
   }
 }
