--- a/package.json
+++ b/package.json
@@ -1,65 +1,66 @@
 {
-  "name": "@tadashi/svelte-template",
+  "name": "boilerplate-svelte",
   "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com:lagden/svelte-template.git"
-  },
-  "description": "Svelte Boilerplate",
+  "repository": "github:lagden/boilerplate-svelte",
+  "description": "Boilerplate para desenvolvimento de uma aplicação utilizando Svelte.",
   "keywords": [
     "svelte",
     "template",
     "boilerplate"
   ],
-  "main": "server/index.js",
+  "main": "public/index.html",
+  "type": "module",
+  "files": [
+    "public",
+    "README.md"
+  ],
   "author": "Thiago Lagden",
   "license": "MIT",
   "scripts": {
-    "echo": "echo \"idle...\"",
     "sprite": "spritetify -d ./src/_assets/svg/files/ -o ./src/_components/_global/Sprite.svelte -c",
-    "eslint": "eslint --config .eslintrc.js --ext .js,.svelte --ignore-path .gitignore .",
+    "eslint": "eslint --config .eslintrc.cjs --ext .js,.svelte --ignore-path .gitignore .",
     "rm": "rm -rf ./public/*",
-    "cp": "sh bin/public",
-    "cleanup": "run-s rm cp",
+    "cp": "cp -R ./static/* ./public/.",
+    "keep": "cp ./static/.gitkeep ./public/.gitkeep",
+    "cleanup": "run-s rm cp keep",
     "rollup": "rollup -c",
-    "serve": "node server",
+    "serve": "sirv public --cors --host --port ${PORT}",
     "test": "npm run eslint",
     "build": "run-s test cleanup rollup",
-    "dev": "run-s cleanup rollup echo",
-    "prestart": "npm test",
-    "start": "run-p serve dev"
+    "start": "run-s build serve"
   },
   "dependencies": {
-    "@tadashi/koa-base": "4.0.0",
-    "debug": "4.3.1",
-    "koa": "2.13.1",
-    "koa-ctx-cache-control": "1.0.1",
-    "koa-static": "5.0.0",
-    "local-access": "1.1.0",
-    "supports-color": "8.1.1"
+    "sirv-cli": "1.0.11"
   },
   "devDependencies": {
+    "@babel/core": "7.14.2",
+    "@babel/eslint-parser": "7.14.2",
+    "@babel/plugin-syntax-top-level-await": "7.12.13",
     "@emotion/css": "11.1.3",
-    "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.2.0",
-    "@tadashi/hex-id": "2.0.0",
+    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-node-resolve": "13.0.0",
     "@tadashi/rollup-plugin-brotli": "1.0.2",
     "@tadashi/rollup-plugin-widget": "2.0.0",
     "@tadashi/spritetify": "1.0.0",
     "autoprefixer": "10.2.5",
-    "eslint": "7.22.0",
-    "eslint-config-xo": "0.35.0",
+    "eslint": "7.26.0",
+    "eslint-config-xo": "0.36.0",
     "eslint-plugin-html": "6.1.2",
-    "eslint-plugin-svelte3": "3.1.2",
-    "eslint-plugin-unicorn": "29.0.0",
-    "node-sass": "5.0.0",
+    "eslint-plugin-svelte3": "3.2.0",
+    "eslint-plugin-unicorn": "32.0.1",
+    "node-sass": "6.0.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.2.8",
-    "rollup": "2.42.2",
+    "postcss": "8.2.15",
+    "rollup": "2.47.0",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
-    "svelte": "3.35.0",
-    "svelte-preprocess": "4.6.9"
+    "svelte": "3.38.2",
+    "svelte-preprocess": "4.7.3"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-syntax-top-level-await"
+    ]
   }
 }
