--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   "scripts": {
     "sprite": "spritetify -d ./src/_assets/svg/ -o ./src/_components/_global/Sprite.svelte -c",
     "eslint": "eslint --config .eslintrc.cjs --ext .js,.svelte --ignore-path .gitignore .",
+    "prettier": "prettier -c --plugin-search-dir=. ./src/**/*.{svelte,js}",
+    "format": "prettier --write --plugin-search-dir=. ./src/**/*.{svelte,js}",
+    "lint": "run-s prettier eslint",
     "rm": "rm -rf ./public/*",
     "cp": "cp -R ./static/* ./public/.",
     "keep": "cp ./static/.gitkeep ./public/.gitkeep",
     "clean": "run-s cp keep",
     "roll": "rollup -c",
     "serve": "sirv public --dev --cors --host --port ${PORT}",
-    "test": "npm run eslint",
+    "test": "npm run lint",
     "build": "run-s test clean roll",
     "start": "run-p build serve"
   },
@@ -37,27 +40,29 @@
     "@babel/eslint-parser": "7.14.7",
     "@babel/plugin-syntax-top-level-await": "7.14.5",
     "@emotion/css": "11.1.3",
-    "@rollup/plugin-commonjs": "19.0.0",
-    "@rollup/plugin-node-resolve": "13.0.0",
+    "@rollup/plugin-commonjs": "19.0.1",
+    "@rollup/plugin-node-resolve": "13.0.2",
     "@tadashi/rollup-plugin-brotli": "1.0.2",
     "@tadashi/rollup-plugin-widget": "2.0.0",
     "@tadashi/spritetify": "1.0.0",
     "@tadashi/svelte-icon": "lagden/svelte-icon#1.0.0",
-    "autoprefixer": "10.2.6",
-    "eslint": "7.29.0",
+    "autoprefixer": "10.3.1",
+    "eslint": "7.30.0",
     "eslint-config-xo": "0.37.0",
     "eslint-plugin-html": "6.1.2",
     "eslint-plugin-svelte3": "3.2.0",
-    "eslint-plugin-unicorn": "33.0.1",
-    "node-sass": "6.0.0",
+    "eslint-plugin-unicorn": "34.0.1",
+    "node-sass": "6.0.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.3.5",
-    "rollup": "2.52.2",
+    "prettier": "2.3.2",
+    "prettier-plugin-svelte": "2.3.1",
+    "rollup": "2.53.2",
     "rollup-plugin-css-only": "3.1.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "svelte": "3.38.3",
-    "svelte-preprocess": "4.7.3"
+    "svelte-preprocess": "4.7.4"
   },
   "babel": {
     "plugins": [
