--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "template",
     "boilerplate"
   ],
-  "main": "public/index.html",
   "type": "module",
+  "main": "public/index.html",
   "files": [
     "public",
     "README.md"
@@ -22,47 +22,47 @@
     "prettier": "prettier -c --plugin-search-dir=. ./src/**/*.{svelte,js}",
     "format": "prettier --write --plugin-search-dir=. ./src/**/*.{svelte,js}",
     "lint": "run-s prettier eslint",
-    "rm": "rm -rf ./public/*",
-    "cp": "cp -R ./static/* ./public/.",
-    "keep": "cp ./static/.gitkeep ./public/.gitkeep",
-    "clean": "run-s cp keep",
-    "roll": "rollup -c",
-    "serve": "sirv public --dev --cors --host --port ${PORT}",
+    "rollup": "rollup -c",
     "test": "npm run lint",
-    "build": "run-s test clean roll",
-    "start": "run-p build serve"
+    "build": "run-s test rollup",
+    "prestart": "npm test",
+    "start": "vite"
   },
   "dependencies": {
-    "sirv-cli": "1.0.12"
+    "sirv-cli": "1.0.14"
   },
   "devDependencies": {
-    "@babel/core": "7.14.6",
-    "@babel/eslint-parser": "7.14.7",
+    "@babel/core": "7.15.5",
+    "@babel/eslint-parser": "7.15.7",
     "@babel/plugin-syntax-top-level-await": "7.14.5",
     "@emotion/css": "11.1.3",
-    "@rollup/plugin-commonjs": "19.0.1",
-    "@rollup/plugin-node-resolve": "13.0.2",
+    "@rollup/plugin-commonjs": "20.0.0",
+    "@rollup/plugin-html": "0.2.3",
+    "@rollup/plugin-node-resolve": "13.0.4",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.24",
     "@tadashi/rollup-plugin-brotli": "1.0.2",
     "@tadashi/rollup-plugin-widget": "2.0.0",
     "@tadashi/spritetify": "1.0.0",
     "@tadashi/svelte-icon": "lagden/svelte-icon#1.0.0",
-    "autoprefixer": "10.3.1",
-    "eslint": "7.30.0",
-    "eslint-config-xo": "0.37.0",
+    "autoprefixer": "10.3.4",
+    "eslint": "7.32.0",
+    "eslint-config-xo": "0.38.0",
     "eslint-plugin-html": "6.1.2",
-    "eslint-plugin-svelte3": "3.2.0",
-    "eslint-plugin-unicorn": "34.0.1",
-    "node-sass": "6.0.1",
+    "eslint-plugin-svelte3": "3.2.1",
+    "eslint-plugin-unicorn": "36.0.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.3.5",
-    "prettier": "2.3.2",
-    "prettier-plugin-svelte": "2.3.1",
-    "rollup": "2.53.2",
+    "postcss": "8.3.6",
+    "prettier": "2.4.1",
+    "prettier-plugin-svelte": "2.4.0",
+    "rollup": "2.56.3",
     "rollup-plugin-css-only": "3.1.0",
+    "rollup-plugin-sri": "1.3.4",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
-    "svelte": "3.38.3",
-    "svelte-preprocess": "4.7.4"
+    "sass": "1.41.1",
+    "svelte": "3.42.6",
+    "svelte-preprocess": "4.9.4",
+    "vite": "2.5.10"
   },
   "babel": {
     "plugins": [
