--- a/package.json
+++ b/package.json
@@ -24,37 +24,37 @@
     "prettier": "prettier -c --plugin-search-dir=. ./src/**/*.{svelte,js}",
     "format": "prettier --write --plugin-search-dir=. ./src/**/*.{svelte,js}",
     "test": "run-s eslint",
-    "esbuild": "./esbuild.config.js",
+    "esbuild": "node ./esbuild.config.js",
     "build": "run-s test rm cp esbuild",
     "prestart": "npm test",
     "start": "vite --cors --port ${PORT} --host ${HOSTNAME_CUSTOM}"
   },
   "dependencies": {
-    "sirv-cli": "2.0.1"
+    "sirv-cli": "2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.16.7",
-    "@babel/eslint-parser": "7.16.5",
+    "@babel/core": "7.17.5",
+    "@babel/eslint-parser": "7.17.0",
     "@emotion/css": "11.7.1",
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.34",
-    "@tadashi/spritetify": "1.0.0",
-    "@tadashi/svelte-icon": "lagden/svelte-icon#1.1.0",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.39",
+    "@tadashi/spritetify": "2.0.1",
+    "@tadashi/svelte-icon": "lagden/svelte-icon#2.0.0",
     "autoprefixer": "10.4.2",
-    "esbuild": "0.14.11",
-    "esbuild-svelte": "0.6.1",
-    "eslint": "8.7.0",
-    "eslint-config-xo": "0.39.0",
+    "esbuild": "0.14.25",
+    "esbuild-svelte": "0.6.3",
+    "eslint": "8.10.0",
+    "eslint-config-xo": "0.40.0",
     "eslint-plugin-html": "6.2.0",
-    "eslint-plugin-svelte3": "3.4.0",
-    "eslint-plugin-unicorn": "40.1.0",
+    "eslint-plugin-svelte3": "3.4.1",
+    "eslint-plugin-unicorn": "41.0.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.5",
+    "postcss": "8.4.8",
     "prettier": "2.5.1",
     "prettier-plugin-svelte": "2.6.0",
-    "sass": "1.48.0",
-    "svelte": "3.46.2",
-    "svelte-preprocess": "4.10.2",
-    "vite": "2.7.12"
+    "sass": "1.49.9",
+    "svelte": "3.46.4",
+    "svelte-preprocess": "4.10.4",
+    "vite": "2.8.6"
   },
   "babel": {}
 }
