update packs and remove emotion

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Thiago Lagden",
   "license": "MIT",
   "scripts": {
-    "cp": "cp static/* public/.",
+    "mkdir": "mkdir -p public",
+    "cp": "cp -R static/* public/.",
     "rm": "rm -rf public/scripts/*",
     "sprite": "spritetify -d ./src/_assets/svg/ -o ./src/_components/_global/Sprite.svelte -c",
     "eslint": "eslint --config .eslintrc.cjs --ext .js,.svelte --ignore-path .gitignore .",
@@ -25,36 +26,36 @@
     "format": "prettier --write --plugin-search-dir=. ./src/**/*.{svelte,js}",
     "test": "run-s eslint",
     "esbuild": "node ./esbuild.config.js",
-    "build": "run-s test rm cp esbuild",
+    "build": "run-s test rm mkdir cp esbuild",
     "prestart": "npm test",
-    "start": "vite --cors --port ${PORT} --host ${HOSTNAME_CUSTOM}"
+    "start": "vite --cors --port ${PORT:-5000} --host ${HOSTNAME_CUSTOM:-0.0.0.0}"
   },
   "dependencies": {
     "sirv-cli": "2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.17.5",
+    "@babel/core": "7.17.10",
     "@babel/eslint-parser": "7.17.0",
-    "@emotion/css": "11.7.1",
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.39",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.43",
+    "@tadashi/common": "1.0.0",
     "@tadashi/spritetify": "2.0.1",
-    "@tadashi/svelte-icon": "lagden/svelte-icon#2.0.0",
-    "autoprefixer": "10.4.2",
-    "esbuild": "0.14.25",
-    "esbuild-svelte": "0.6.3",
-    "eslint": "8.10.0",
+    "@tadashi/svelte-icon": "2.1.0",
+    "autoprefixer": "10.4.7",
+    "esbuild": "0.14.38",
+    "esbuild-svelte": "0.7.0",
+    "eslint": "8.15.0",
     "eslint-config-xo": "0.40.0",
     "eslint-plugin-html": "6.2.0",
-    "eslint-plugin-svelte3": "3.4.1",
-    "eslint-plugin-unicorn": "41.0.0",
+    "eslint-plugin-svelte3": "4.0.0",
+    "eslint-plugin-unicorn": "42.0.0",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.8",
-    "prettier": "2.5.1",
-    "prettier-plugin-svelte": "2.6.0",
-    "sass": "1.49.9",
-    "svelte": "3.46.4",
-    "svelte-preprocess": "4.10.4",
-    "vite": "2.8.6"
+    "postcss": "8.4.13",
+    "prettier": "2.6.2",
+    "prettier-plugin-svelte": "2.7.0",
+    "sass": "1.51.0",
+    "svelte": "3.48.0",
+    "svelte-preprocess": "4.10.6",
+    "vite": "2.9.9"
   },
   "babel": {}
 }
