--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -2,12 +2,12 @@ arrowParens: avoid
 bracketSpacing: false
 # endOfLine: lf
 # htmlWhitespaceSensitivity: css
-insertPragma: true
+insertPragma: false
 # parser: babel
 printWidth: 120
 proseWrap: never
 quoteProps: as-needed
-requirePragma: true
+requirePragma: false
 semi: false
 singleQuote: true
 tabWidth: 2
