--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Thiago Lagden",
   "license": "MIT",
   "scripts": {
-    "mkdir": "mkdir -p public",
+    "mkdir": "mkdir -p \"public\"",
     "cp": "cp -R static/* public/.",
     "rm": "rm -rf public/scripts/*",
     "sprite": "spritetify -d ./src/_assets/svg/ -o ./src/_components/_global/Sprite.svelte -c",
@@ -38,10 +38,10 @@
     "@babel/eslint-parser": "7.18.2",
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.48",
     "@tadashi/common": "1.2.0",
-    "@tadashi/spritetify": "2.0.1",
+    "@tadashi/spritetify": "2.0.2",
     "@tadashi/svelte-icon": "2.1.0",
     "autoprefixer": "10.4.7",
-    "esbuild": "0.14.42",
+    "esbuild": "0.14.43",
     "esbuild-svelte": "0.7.1",
     "eslint": "8.17.0",
     "eslint-config-xo": "0.41.0",
@@ -52,7 +52,7 @@
     "postcss": "8.4.14",
     "prettier": "2.6.2",
     "prettier-plugin-svelte": "2.7.0",
-    "sass": "1.52.2",
+    "sass": "1.52.3",
     "svelte": "3.48.0",
     "svelte-preprocess": "4.10.7",
     "vite": "2.9.10"
