--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vite
 .registry-*
 .env-local
 docker-compose-*.yml
@@ -7,9 +8,6 @@ resource
 # Public
 !public/.gitkeep
 
-# Vite
-.vite/*
-
 # Boilerplate
 _cleanup
 _init
@@ -18,14 +16,15 @@ _init
 node_modules
 
 # Yarn
+.pnp.*
 .yarn/*
+!.yarnrc.yml
+# !.yarn/cache
 !.yarn/patches
-!.yarn/releases
 !.yarn/plugins
+!.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-!.yarnrc.yml
-.pnp.*
 
 # Logs
 logs
