--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "eslint-plugin-unicorn": "42.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.14",
-    "prettier": "2.6.2",
+    "prettier": "2.7.0",
     "prettier-plugin-svelte": "2.7.0",
     "sass": "1.52.3",
     "svelte": "3.48.0",
     "svelte-preprocess": "4.10.7",
     "vite": "2.9.12"
   },
-  "babel": {}
+  "babel": {},
+  "packageManager": "yarn@3.2.1"
 }
