--- a/spritetify.config.json
+++ b/spritetify.config.json
@@ -8,7 +8,7 @@
     {
       "name": "removeAttrs",
       "params": {
-        "attrs": "(fill|stroke)"
+        "attrs": "(stroke)"
       }
     },
     {
