--- a/package.json
+++ b/package.json
@@ -36,24 +36,25 @@
     "@babel/core": "7.18.5",
     "@babel/eslint-parser": "7.18.2",
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
-    "@tadashi/common": "1.2.0",
-    "@tadashi/spritetify": "2.0.2",
-    "@tadashi/svelte-icon": "2.1.0",
+    "@tadashi/common": "1.4.1",
+    "@tadashi/spritetify": "2.1.0",
+    "@tadashi/svelte-icon": "3.0.0",
     "autoprefixer": "10.4.7",
-    "esbuild": "0.14.43",
+    "esbuild": "0.14.47",
     "esbuild-svelte": "0.7.1",
-    "eslint": "8.17.0",
+    "eslint": "8.18.0",
     "eslint-config-xo": "0.41.0",
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-svelte3": "4.0.0",
     "eslint-plugin-unicorn": "42.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.14",
-    "prettier": "2.7.0",
+    "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
-    "sass": "1.52.3",
+    "sass": "1.53.0",
     "svelte": "3.48.0",
     "svelte-preprocess": "4.10.7",
+    "tailwindcss": "3.1.4",
     "vite": "2.9.12"
   },
   "babel": {},
