--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "eslint-plugin-unicorn": "42.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.14",
+    "postcss-import": "14.1.0",
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
-    "sass": "1.53.0",
     "svelte": "3.48.0",
     "svelte-preprocess": "4.10.7",
     "tailwindcss": "3.1.4",
