--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,9 +40,11 @@ jobs:
         run: |
           bin/local/start -b;
           cd public;
-          git init;
           git config user.name "Thiago Lagden";
           git config user.email "lagden@gmail.com";
+          git config --global init.defaultBranch main
+          git init;
+          git branch -m main
           git add . ;
           git commit -m "Deploy to GitHub Pages";
           git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@${{ github.ref }}" main:gh-pages > /dev/null 2>&1;
