--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,20 +36,20 @@ jobs:
       - name: Run build
         run: bin/local/start -b
 
-      # - name: GH Pages Deploy
-      #   run: |
-      #     cd public;
-      #     git config --global init.defaultBranch main
-      #     git init;
-      #     git config user.name "Thiago Lagden";
-      #     git config user.email "lagden@gmail.com";
-      #     git branch -m main
-      #     git add . ;
-      #     git commit -m "Deploy to GitHub Pages";
-      #     git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@${{ github.ref }}" main:gh-pages > /dev/null 2>&1;
+      - name: GH Pages Deploy
+        run: |
+          cd public;
+          git config --global init.defaultBranch main
+          git init;
+          git config user.name "Thiago Lagden";
+          git config user.email "lagden@gmail.com";
+          git branch -m main
+          git add . ;
+          git commit -m "Deploy to GitHub Pages";
+          git push --force --quiet "https://${{ secrets.GITHUB_TOKEN }}@${{ github.ref }}" main:gh-pages > /dev/null 2>&1;
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./public
