--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -5,18 +5,18 @@ bracketSpacing: false
 insertPragma: false
 # parser: babel
 printWidth: 120
-proseWrap: never
+proseWrap: preserve
 quoteProps: as-needed
 requirePragma: false
 semi: false
 singleQuote: true
-tabWidth: 2
+# tabWidth: 2
 trailingComma: all
 useTabs: true
 plugins:
   - svelte
 svelteSortOrder: options-scripts-markup-styles
 svelteStrictMode: false
-svelteBracketNewLine: false
+# svelteBracketNewLine: false
 svelteAllowShorthand: true
 svelteIndentScriptAndStyle: true
