--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint": "eslint --config .eslintrc.cjs --ext .js,.svelte --ignore-path .gitignore .",
     "prettier": "prettier -c --plugin-search-dir=. ./src/**/*.{svelte,js}",
     "format": "prettier --write --plugin-search-dir=. ./src/**/*.{svelte,js}",
-    "test": "run-s eslint",
+    "test": "run-s prettier eslint",
     "esbuild": "node ./esbuild.config.js",
     "build": "run-s test rm cp esbuild",
     "prestart": "npm test",
@@ -34,7 +34,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
-    "@babel/eslint-parser": "7.18.2",
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
     "@tadashi/common": "1.4.1",
     "@tadashi/spritetify": "2.1.0",
@@ -43,8 +42,8 @@
     "esbuild": "0.14.47",
     "esbuild-svelte": "0.7.1",
     "eslint": "8.18.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-config-xo": "0.41.0",
-    "eslint-plugin-html": "6.2.0",
     "eslint-plugin-svelte3": "4.0.0",
     "eslint-plugin-unicorn": "42.0.0",
     "npm-run-all": "4.1.5",
