--- a/package.json
+++ b/package.json
@@ -34,29 +34,28 @@
     "sirv-cli": "2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.18.5",
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
-    "@tadashi/common": "1.4.1",
+    "@sveltejs/vite-plugin-svelte": "1.0.5",
+    "@tadashi/common": "1.7.0",
     "@tadashi/spritetify": "2.1.0",
     "@tadashi/svelte-icon": "3.0.0",
-    "autoprefixer": "10.4.7",
-    "esbuild": "0.14.47",
+    "autoprefixer": "10.4.9",
+    "esbuild": "0.15.7",
     "esbuild-svelte": "0.7.1",
-    "eslint": "8.18.0",
+    "eslint": "8.23.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-config-xo": "0.41.0",
+    "eslint-config-xo": "0.42.0",
     "eslint-plugin-svelte3": "4.0.0",
-    "eslint-plugin-unicorn": "42.0.0",
+    "eslint-plugin-unicorn": "43.0.2",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.14",
-    "postcss-import": "14.1.0",
+    "postcss": "8.4.16",
+    "postcss-import": "15.0.0",
+    "postcss-scrollbar": "0.5.1",
     "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
-    "svelte": "3.48.0",
+    "svelte": "3.50.1",
     "svelte-preprocess": "4.10.7",
-    "tailwindcss": "3.1.4",
-    "vite": "2.9.12"
+    "tailwindcss": "3.1.8",
+    "vite": "3.1.0"
   },
-  "babel": {},
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.2.3"
 }
