--- a/package.json
+++ b/package.json
@@ -9,53 +9,41 @@
     "boilerplate"
   ],
   "type": "module",
-  "main": "public/index.html",
+  "main": "dist/index.html",
   "files": [
-    "public",
+    "dist",
     "README.md"
   ],
   "author": "Thiago Lagden",
   "license": "MIT",
   "scripts": {
-    "rm": "rm -rf public/*",
-    "cp": "cp -R static/* public/.",
     "sprite": "spritetify -d ./src/_assets/svg/ -o ./src/_components/_global/Sprite.svelte -c",
     "eslint": "eslint --config .eslintrc.cjs --ext .js,.svelte --ignore-path .gitignore .",
-    "prettier": "prettier -c --plugin-search-dir=. ./src/**/*.{svelte,js}",
-    "format": "prettier --write --plugin-search-dir=. ./src/**/*.{svelte,js}",
     "test": "run-s eslint",
-    "esbuild": "node ./esbuild.config.js",
-    "build": "run-s test rm cp esbuild",
-    "prestart": "npm test",
-    "start": "vite --cors --port ${PORT:-5000} --host ${HOSTNAME_CUSTOM:-0.0.0.0}"
+    "vite:build": "vite build",
+    "build": "run-s prestart vite:build",
+    "prestart": "run-s sprite test",
+    "start": "vite --cors --port ${PORT:-5000} --host ${HOSTNAME_CUSTOM:-0.0.0.0}",
+    "sirv": "sirv ${PUBLIC_DIR:-dist} --dev -eBcm 0 -H ${HOSTNAME_CUSTOM:-0.0.0.0} --port ${PORT:-5000}"
   },
   "dependencies": {
-    "esbuild-style-plugin": "1.6.0",
     "sirv-cli": "2.0.2"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "1.0.5",
-    "@tadashi/common": "1.7.0",
-    "@tadashi/spritetify": "2.1.0",
-    "@tadashi/svelte-icon": "3.0.0",
-    "autoprefixer": "10.4.9",
-    "esbuild": "0.15.7",
-    "esbuild-svelte": "0.7.1",
-    "eslint": "8.23.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-config-xo": "0.42.0",
+    "@sveltejs/vite-plugin-svelte": "2.0.2",
+    "@tadashi/common": "2.1.0",
+    "@tadashi/spritetify": "2.2.0",
+    "eslint": "8.30.0",
+    "eslint-config-xo": "0.43.1",
     "eslint-plugin-svelte3": "4.0.0",
-    "eslint-plugin-unicorn": "43.0.2",
+    "eslint-plugin-unicorn": "45.0.2",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.16",
-    "postcss-import": "15.0.0",
+    "postcss": "8.4.20",
+    "postcss-import": "15.1.0",
     "postcss-scrollbar": "0.5.1",
-    "prettier": "2.7.1",
-    "prettier-plugin-svelte": "2.7.0",
-    "svelte": "3.50.1",
-    "svelte-preprocess": "4.10.7",
-    "tailwindcss": "3.1.8",
-    "vite": "3.1.0"
-  },
-  "packageManager": "yarn@3.2.3"
+    "svelte": "3.55.0",
+    "svelte-preprocess": "5.0.0",
+    "tailwindcss": "3.2.4",
+    "vite": "4.0.3"
+  }
 }
