--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "eslint": "eslint --config .eslintrc.cjs --ext .js,.svelte --ignore-path .gitignore .",
     "test": "run-s eslint",
     "vite:build": "vite build",
-    "build": "run-s previte vite:build",
-    "previte": "run-s sprite test",
-    "vite": "vite --cors --port ${PORT:-5000} --host ${HOSTNAME_CUSTOM:-0.0.0.0}",
+    "build": "run-s predev vite:build",
+    "predev": "run-s sprite test",
+    "dev": "vite --cors --port ${PORT:-5000} --host ${HOSTNAME_CUSTOM:-0.0.0.0}",
     "start": "sirv ${PUBLIC_DIR:-dist} --dev -eBcm 0 -H ${HOSTNAME_CUSTOM:-0.0.0.0} --port ${PORT:-5000}"
   },
   "dependencies": {
@@ -31,19 +31,19 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "2.0.2",
-    "@tadashi/common": "2.1.0",
+    "@tadashi/common": "3.2.0",
     "@tadashi/spritetify": "2.2.0",
-    "eslint": "8.30.0",
+    "eslint": "8.34.0",
     "eslint-config-xo": "0.43.1",
     "eslint-plugin-svelte3": "4.0.0",
     "eslint-plugin-unicorn": "45.0.2",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.20",
+    "postcss": "8.4.21",
     "postcss-import": "15.1.0",
     "postcss-scrollbar": "0.5.1",
-    "svelte": "3.55.0",
-    "svelte-preprocess": "5.0.0",
-    "tailwindcss": "3.2.4",
-    "vite": "4.0.3"
+    "svelte": "3.55.1",
+    "svelte-preprocess": "5.0.1",
+    "tailwindcss": "3.2.6",
+    "vite": "4.1.1"
   }
 }
