--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,9 +25,9 @@ jobs:
 
       - name: Initialize
         run: |
-          npx tiged lagden/boilerplate-bin/files#main bin --force;
-          npx tiged lagden/boilerplate-eslint/files/frontend#main . --force;
-          npx tiged lagden/boilerplate-envs/files#main . --force;
+          npx tiged lagden/boilerplate-bin/files#main bin --force
+          npx tiged lagden/boilerplate-envs/files#main .conf --force
+          npx tiged lagden/boilerplate-eslint/files/frontend#main . --force
 
       - name: Install dependencies
         run: pnpm install
