--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -37,7 +37,7 @@ jobs:
         run: pnpm install
 
       - name: Run build
-        run: npm run build
+        run: bin/local/start -bi -e production
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
