--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,6 +42,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
+          # branch: gh-pages
           folder: dist
-          token: ${{ secrets.SERVICEUSER_GITHUB_PAGES }}
+          # token: ${{ secrets.SERVICEUSER_GITHUB_PAGES }}
