--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "svelte": "3.58.0",
     "svelte-preprocess": "5.0.3",
     "tailwindcss": "3.3.1",
-    "vite": "4.3.1"
+    "vite": "4.3.1",
+    "vite-plugin-html": "3.2.0"
   }
 }
