--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-#files
-.registry-*
-.env-local
-.env/local.conf.sh
-docker-compose-*.yml
-
-#folders
+.conf/local.sh
 .vite
 dist
 resource
@@ -12,36 +6,16 @@ resource
 # node
 node_modules
 
-# Yarn
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# Lock
+pnpm-lock.yaml
+package-lock.json
 
 # Logs
 logs
 *.log
 *.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
 # Coverage
-.nyc_output
-coverage
-lib-cov
-*.lcov
-
-# Others
-.idea
-.DS_Store
-
-# Boilerplate
-_cleanup
-_init
+coverage/**
+!coverage/lcov.info
+!coverage/cobertura-coverage.xml
