--- a/package.json
+++ b/package.json
@@ -1,48 +1,37 @@
 {
-  "name": "boilerplate-svelte",
-  "version": "1.0.0",
-  "repository": "github:lagden/boilerplate-svelte",
-  "description": "Boilerplate para desenvolvimento de uma aplicação utilizando Svelte.",
-  "keywords": [
-    "svelte",
-    "template",
-    "boilerplate"
-  ],
   "type": "module",
-  "main": "dist/index.html",
-  "files": [
-    "dist",
-    "README.md"
-  ],
-  "author": "Thiago Lagden",
-  "license": "MIT",
   "scripts": {
-    "sprite": "spritetify -d ./src/_assets/svg/ -o ./src/_components/_global/Sprite.svelte -c",
-    "eslint": "eslint --config .eslintrc.cjs --ext .js,.svelte --ignore-path .gitignore .",
+    "eslint": "prettier --check --plugin prettier-plugin-svelte . && eslint --ignore-path .gitignore .",
+    "format": "prettier --write --plugin prettier-plugin-svelte .",
     "test": "run-s eslint",
     "vite:build": "vite build",
     "build": "run-s predev vite:build",
-    "predev": "run-s sprite test",
-    "dev": "vite --cors --port ${PORT:-5001} --host ${HOSTNAME_CUSTOM:-0.0.0.0}",
-    "start": "sirv ${PUBLIC_DIR:-dist} --dev -eBcm 0 -H ${HOSTNAME_CUSTOM:-0.0.0.0} --port ${PORT:-5001}"
+    "predev": "run-s test",
+    "dev": "vite --cors --port 5001 --host 127.0.0.1",
+    "start": "sirv dist --dev -eBcm 0 -H 127.0.0.1 --port 5001"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "2.2.0",
-    "@tadashi/common": "3.3.0",
-    "@tadashi/spritetify": "2.2.0",
-    "eslint": "8.40.0",
-    "eslint-config-xo": "0.43.1",
-    "eslint-plugin-svelte3": "4.0.0",
-    "eslint-plugin-unicorn": "47.0.0",
+    "@steeze-ui/heroicons": "2.2.3",
+    "@steeze-ui/svelte-icon": "1.5.0",
+    "@sveltejs/vite-plugin-svelte": "3.0.1",
+    "@tadashi/common": "4.2.0",
+    "autoprefixer": "10.4.16",
+    "daisyui": "4.4.14",
+    "dotenv": "16.3.1",
+    "eslint": "8.54.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-svelte": "2.35.1",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.23",
+    "postcss": "8.4.31",
     "postcss-import": "15.1.0",
     "postcss-scrollbar": "0.5.1",
+    "prettier": "3.1.0",
+    "prettier-plugin-svelte": "3.1.2",
     "sirv-cli": "2.0.2",
-    "svelte": "3.59.1",
-    "svelte-preprocess": "5.0.3",
-    "tailwindcss": "3.3.2",
-    "vite": "4.3.8",
+    "svelte": "4.2.7",
+    "svelte-preprocess": "5.1.1",
+    "tailwindcss": "3.3.5",
+    "vite": "5.0.3",
     "vite-plugin-html": "3.2.0"
   }
 }
