--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@tadashi/common": "4.2.0",
     "autoprefixer": "10.4.16",
     "daisyui": "4.4.14",
-    "dotenv": "16.3.1",
     "eslint": "8.54.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-svelte": "2.35.1",
+    "eslint-plugin-unicorn": "49.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.31",
     "postcss-import": "15.1.0",
@@ -31,7 +31,6 @@
     "svelte": "4.2.7",
     "svelte-preprocess": "5.1.1",
     "tailwindcss": "3.3.5",
-    "vite": "5.0.3",
-    "vite-plugin-html": "3.2.0"
+    "vite": "5.0.4"
   }
 }
