--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,7 @@
 # * text=auto
-# * text eol=lf
+* text eol=lf
 
 *.png binary
 *.jpg binary
-*.mp4 binary
 
-# /.yarn/** linguist-vendored
+/.yarn/** linguist-vendored
