--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "type": "module",
   "scripts": {
-    "eslint": "prettier --check --plugin prettier-plugin-svelte . && eslint --ignore-path .gitignore .",
+    "eslint": "eslint .",
+    "check": "prettier --check --plugin prettier-plugin-svelte .",
     "format": "prettier --write --plugin prettier-plugin-svelte .",
-    "test": "run-s eslint",
+    "test": "run-s check eslint",
     "vite:build": "vite build",
     "build": "run-s predev vite:build",
     "predev": "run-s test",
@@ -19,6 +20,7 @@
     "daisyui": "4.4.14",
     "eslint": "8.54.0",
     "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-sonarjs": "0.23.0",
     "eslint-plugin-svelte": "2.35.1",
     "eslint-plugin-unicorn": "49.0.0",
     "npm-run-all": "4.1.5",
