--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -29,17 +29,15 @@ rules:
   no-undef-init: off
   no-unused-expressions:
     - error
-    -
-      allowShortCircuit: true
+    - allowShortCircuit: true
       allowTernary: true
       allowTaggedTemplates: true
   padding-line-between-statements: off
   quotes: [error, single]
-  semi:  [error, never]
+  semi: [error, never]
   semi-spacing:
     - error
-    -
-      before: false
+    - before: false
       after: true
   spaced-comment: off
   # unicorn/consistent-destructuring: off
