--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "start": "sirv dist --dev -eBcm 0 -H 127.0.0.1 --port 5001"
   },
   "devDependencies": {
-    "@steeze-ui/heroicons": "2.2.3",
+    "@steeze-ui/heroicons": "2.3.0",
     "@steeze-ui/svelte-icon": "1.5.0",
     "@sveltejs/vite-plugin-svelte": "3.0.1",
-    "@tadashi/common": "4.2.0",
-    "autoprefixer": "10.4.16",
-    "daisyui": "4.4.14",
-    "eslint": "8.54.0",
-    "eslint-config-prettier": "9.0.0",
+    "@tadashi/common": "4.2.1",
+    "@tailwindcss/container-queries": "0.1.1",
+    "autoprefixer": "10.4.17",
+    "daisyui": "4.6.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-sonarjs": "0.23.0",
     "eslint-plugin-svelte": "2.35.1",
-    "eslint-plugin-unicorn": "49.0.0",
+    "eslint-plugin-unicorn": "50.0.1",
     "npm-run-all": "4.1.5",
-    "postcss": "8.4.31",
-    "postcss-import": "15.1.0",
+    "postcss": "8.4.33",
+    "postcss-import": "16.0.0",
     "postcss-scrollbar": "0.5.1",
-    "prettier": "3.1.0",
+    "prettier": "3.2.4",
     "prettier-plugin-svelte": "3.1.2",
     "sirv-cli": "2.0.2",
-    "svelte": "4.2.7",
-    "svelte-preprocess": "5.1.1",
-    "tailwindcss": "3.3.5",
-    "vite": "5.0.4"
+    "svelte": "4.2.9",
+    "svelte-preprocess": "5.1.3",
+    "tailwindcss": "3.4.1",
+    "vite": "5.0.11"
   }
 }
