--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,7 +10,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
-    "checkJs": true,
+    "checkJs": true
   },
-  "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
 }
